--- a/book.toml
+++ b/book.toml
@@ -4,8 +4,7 @@ language = "en"
 multilingual = false
 src = "src"
 title = "QA Exercises"
-
 [output.html]
 default-theme = "rust"
 preferred-dark-theme = "rust"
-head = "<script async src=\"https://www.googletagmanager.com/gtag/js?id=G-Q0R6TK9CN5\"></script><script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-Q0R6TK9CN5');</script>"
+google-analytics = "G-Q0R6TK9CN5"
